crates/science-parser/tests/snapshots/parse_tools__a_def_without_a_description_is_fine.snap
---
source: crates/science-parser/tests/parse_tools.rs
expression: "parse_source(\"def helper(x: Int) -> Int:\n    x\n\")"
---
Module @0..33
  Fn `helper` @0..32
    params
      Param `x` @11..17
        type: Path `Int` @14..17
    ret: Path `Int` @22..25
    body: Block @31..32
      tail: Path `x` @31..32
--- diagnostics ---
(none)
