crates/science-parser/tests/snapshots/parse_tools__a_generic_tool_is_rejected.snap
---
source: crates/science-parser/tests/parse_tools.rs
expression: "parse_source_allowing_errors(\"## Return the largest of the values.\ntool largest[T](values: Array[T]) -> Int:\n    0\n\")"
---
Module @37..85
  Tool `largest` @37..84
    generics
      TypeParam `T` @50..51
    params
      Param `values` @53..69
        type: Path `Array` @61..69
          generics of `Array`
            Path `T` @67..68
    ret: Path `Int` @74..77
    body: Block @83..84
      tail: Int 0 @83..84
--- diagnostics ---
SC0191 @49..52 a `tool` is not generic
  note one tool is one entry in the list its caller is given, with one parameter schema; write one tool per concrete type
