crates/science-parser/tests/snapshots/parse_tools__a_reserved_word_that_declares_nothing_is_left_alone.snap
---
source: crates/science-parser/tests/parse_tools.rs
expression: "parse_source_allowing_errors(\"prompt\n\")"
---
Module @0..7
--- diagnostics ---
SC0101 @0..6 expected a declaration (`def`, `tool`, `type`, `choice`, `interface`, `const`, `use`, or a type followed by `implements` or `has`), found `prompt`, which is reserved for a later phase
