crates/science-parser/tests/snapshots/parse_tools__a_tool_missing_its_colon_is_one_diagnostic_and_not_two.snap
---
source: crates/science-parser/tests/parse_tools.rs
expression: "parse_source_allowing_errors(\"## Fit peaks in a time-of-flight window.\ntool fit_peaks(window_lower: F64) -> Int\n    0\n\")"
---
Module @41..88
  Tool `fit_peaks` @41..87
    params
      Param `window_lower` @56..73
        type: Path `F64` @70..73
    ret: Path `Int` @78..81
--- diagnostics ---
SC0103 @81..82 expected `:` before the function body
