crates/science-parser/tests/snapshots/parse_tools__a_tool_whose_summary_line_is_blank_is_rejected.snap
---
source: crates/science-parser/tests/parse_tools.rs
expression: "parse_source_allowing_errors(\"##\n## Fit peaks in a time-of-flight window.\ntool fit_peaks(run: String) -> Int:\n    0\n\")"
---
Module @44..86
  Tool `fit_peaks` @44..85
    params
      Param `run` @59..70
        type: Path `String` @64..70
    ret: Path `Int` @75..78
    body: Block @84..85
      tail: Int 0 @84..85
--- diagnostics ---
SC0195 @0..43 a `tool`'s description opens with its summary
  note @44..48 the `tool` it describes
  note the first line, up to the first blank `##`, is the tool's title; the whole comment is its description, summary included
